# LocalMotion

./: .env.qnn.example  .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/localmotion/: LocalMotionApp.kt  MainActivity.kt
app/src/main/java/com/localmotion/backend/: BackendClient.kt  GenerationBackend.kt  NativeSidecarGenerationBackend.kt  NativeSidecarVideoBackend.kt  StubGenerationBackend.kt  StubVideoBackend.kt  VideoBackend.kt
app/src/main/java/com/localmotion/data/: ArtifactRepository.kt  RuntimeBundleManifest.kt  RuntimeRepository.kt  SettingsRepository.kt
app/src/main/java/com/localmotion/image/: ImageArtifactWriter.kt
app/src/main/java/com/localmotion/model/: GenerationProgressEvent.kt  ImageArtifact.kt  ImageGenerationRequest.kt  VideoArtifact.kt  VideoGenerationRequest.kt  VideoProgressEvent.kt
app/src/main/java/com/localmotion/service/: BackendService.kt  ClipGenerationService.kt  GenerationService.kt  RuntimeInstallService.kt
app/src/main/java/com/localmotion/ui/screens/: ArtifactScreen.kt  HomeScreen.kt  PlayerScreen.kt
app/src/main/java/com/localmotion/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/localmotion/util/: FileExports.kt  ImageUtils.kt
app/src/main/java/com/localmotion/video/: LocalVideoComposer.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/localmotion/: RuntimeBundleManifestTest.kt
docs/: architecture.md  sd15-first-npu.md  wsl-sd15-qnn-checklist.md
gradle/: libs.versions.toml
native/: CMakeLists.txt
native/src/: ClipTokenizer.hpp  LmQnnModel.hpp  LmSdUtils.hpp  main.cpp
tools/: download_initial_models.py
tools/convert-qnn/: README.md  export_sm8650.sh  package_runtime_bundle.py
tools/convert-qnn/sd15/: README.md  check_wsl_sd15_qnn.py  convert_checkpoint_to_diffusers.py  convert_onnx_to_qnn.sh  export_submodels_onnx.py  prepare_wsl_sd15.sh  requirements.txt  stage_runtime_bundle.sh
